Make index template prototype Make notice inc template prototype

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -41,7 +41,7 @@ along with Pythonica.  If not, see <http://www.gnu.org/licenses/>.
 
 {% block header %}
 <div id="header">
-{% include 'header.html' %}
+{% include 'pythonica/header.html' %}
 </div>
 {% endblock header %}
 
@@ -64,7 +64,7 @@ along with Pythonica.  If not, see <http://www.gnu.org/licenses/>.
 
 {% block footer %}
 <div id="footer">
-{% include 'footer.html' %}
+{% include 'pythonica/footer.html' %}
 </div>
 {% endblock footer %}
 
