--- a/core/templates/pythonica/index.html
+++ b/core/templates/pythonica/index.html
@@ -1,4 +1,5 @@
-"""
+{% extends 'base.html' %}
+{% comment %}
 Copyright 2009 Serge Matveenko
 
 This file is part of Pythonica.
@@ -15,15 +16,12 @@ GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with Pythonica.  If not, see <http://www.gnu.org/licenses/>.
-"""
+{% endcomment %}
 
-from django.conf.urls.defaults import *
-from django.contrib import admin
+{% block content %}
 
-admin.autodiscover()
+{% for notice in notices %}
+{% include 'pythonica/inc/notice.html' %}
+{% endfor %}
 
-urlpatterns = patterns('',
-    (r'^', include('core.urls')),
-    
-    (r'^admin/', include(admin.site.urls)),
-)
+{% endblock %}
