--- a/core/templates/pythonica/inc/notice_form.html
+++ b/core/templates/pythonica/inc/notice_form.html
@@ -1,4 +1,5 @@
-"""
+{% load i18n %}
+{% comment %}
 Copyright 2009 Serge Matveenko
 
 This file is part of Pythonica.
@@ -15,19 +16,21 @@ GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with Pythonica.  If not, see <http://www.gnu.org/licenses/>.
-"""
+{% endcomment %}
 
-import os
+<div class="notice_form">
 
-from django.conf import settings
-from django.conf.urls.defaults import *
+{% if user.is_authenticated %}
 
-patterns_prefix = '.'.join((os.path.basename(os.path.dirname(__file__)),
-    'views',))
+<form action="{% url pythonica-post %}" method="post">
+{{ notice_form }}
+<input type="submit" value="{% trans 'ok' %}" >
+</form>
 
-urlpatterns = patterns(patterns_prefix,
-    (r'^$', 'index', {}, 'pythonica-index'),
-    (r'^post/$', 'post', {}, 'pythonica-post'),
-    (r'^(?P<username>%s)/all/$' % settings.USERNAME_REGEX, 'list_all', {},
-        'pythonica-all'),
-)
+{% else %}
+
+<p>This is Pythonica. What ...onica? P, Y, T, H, O, N, I, C, A - Pythonica!</p>
+
+{% endif %}
+
+</div>
