--- a/core/templates/pythonica/inc/notice.html
+++ b/core/templates/pythonica/inc/notice.html
@@ -22,7 +22,7 @@ along with Pythonica.  If not, see <http://www.gnu.org/licenses/>.
 <div class="notice author">{% with notice.author as user %}{% include 'pythonica/inc/user_link.html' %}{% endwith %}</div>
 <div class="notice text">{{ notice.text }}</div>
 <div class="notice posted">{{ notice.posted|timesince }}</div>
-<div class="notice input">{{ notice.input }}</div>
+<div class="notice device">{{ notice.device }}</div>
 <div class="notice reply">{{ notice.in_reply_to.all }}</div>
 </div>
 <hr />
