Handle in_reply_to

--- a/core/templates/pythonica/base.html
+++ b/core/templates/pythonica/base.html
@@ -20,7 +20,9 @@ along with Pythonica.  If not, see <http://www.gnu.org/licenses/>.
 
 {% block content %}
 
+{% block notice_form %}
 {% include 'pythonica/inc/notice_form.html' %}
+{% endblock notice_form %}
 
 {% block pythonica %}
 {% endblock pythonica %}
