--- a/core/templates/pythonica/index.html
+++ b/core/templates/pythonica/index.html
@@ -20,7 +20,7 @@ along with Pythonica.  If not, see <http://www.gnu.org/licenses/>.
 
 {% block pythonica %}
 
-{% for notice in notices %}
+{% for notice in last_notices %}
 {% include 'pythonica/inc/notice.html' %}
 {% endfor %}
 
