--- a/core/templates/pythonica/post.html
+++ b/core/templates/pythonica/post.html
@@ -18,6 +18,11 @@ You should have received a copy of the GNU General Public License
 along with Pythonica.  If not, see <http://www.gnu.org/licenses/>.
 {% endcomment %}
 
+{% block notice_form %}
+{% with error_notice_form as notice_form %}
+{% include 'pythonica/inc/notice_form.html' %}
+{% endwith %}
+{% endblock notice_form %}
+
 {% block pythonica %}
-<div class="error">{{ notice_form.errors }}</div>
 {% endblock pythonica %}
