--- a/core/templates/laconica/inc/notice_short.html
+++ b/core/templates/laconica/inc/notice_short.html
@@ -1,4 +1,4 @@
-"""
+{% comment %}
 Copyright 2009 Serge Matveenko
 
 This file is part of Pythonica.
@@ -15,22 +15,15 @@ GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with Pythonica.  If not, see <http://www.gnu.org/licenses/>.
-"""
+{% endcomment %}
 
-from django.contrib.sites.models import Site
+       <li class="hentry notice">
 
-from forms import NoticeForm
-from models import Notice
+        <div class="entry-title">
+        
+        {% with notice.author as user %}{% include 'laconica/inc/user_link_short.html' %}{% endwith %}
 
+         <p class="entry-content">{{ notice.text }}</p>
 
-def pythonica_context(request):
-    
-    noticeForm = NoticeForm()
-    
-    popular_notices = Notice.objects.public().order_by('-favorited_count')
-    
-    return {
-        'site': Site.objects.get_current(),
-        'notice_form': noticeForm,
-        'popular_notices': popular_notices,
-    }
+</div>
+</li>
