Update index markup

--- a/core/templates/laconica/inc/notice.html
+++ b/core/templates/laconica/inc/notice.html
@@ -44,19 +44,18 @@ along with Pythonica.  If not, see <http://www.gnu.org/licenses/>.
 </dl>
 </div>
          <div class="notice-options">
-          <form id="favor-5022629" class="form_favor" method="post" action="http://identi.ca/main/favor">
+          <form id="favor-{{ notice.id }}" class="form_favor" method="post" action="% favor %">
            <fieldset>
-            <legend>Favor this notice</legend>
+            <legend>{% trans 'Favor this notice' %}</legend>
 
-            <input name="token-5022629" type="hidden" id="token-5022629" value="db0e0354dcc97d79ca8d383424d0cb87feb22ce23434fc5da0705e254e120e1c7c49d28aed931a62519f603395ecb5db45a32059ab72100e8923e3ea370772cf"/>
-            <input name="notice" type="hidden" id="notice-n5022629" value="5022629"/>
-            <input type="submit" id="favor-submit-5022629" name="favor-submit-5022629" class="submit" value="Пометить" title="Favor this notice"/>
+            <input type="submit" id="favor-submit-{{ notice.id }}" name="favor-submit-{{ notice.id }}" class="submit" value="{% trans 'Favor' %}" title="{% trans 'Favor this notice' %}"/>
 </fieldset>
 </form>
           <dl class="notice_reply">
-           <dt>Reply to this notice</dt>
+           <dt>{% trans 'Reply to this notice' %}</dt>
            <dd>
-            <a href="http://identi.ca/notice/new?replyto=datainadequate" title="Reply to this notice">Reply             <span class="notice_id">5022629</span>
+            {# @todo: Add @username to notice form via JS #}
+            <a href="#notice_form" title="{% trans 'Reply to this notice' %}"  onclick="document.getElementById('id_in_reply_to').value='{{ notice.id }}'; return false;">Reply <span class="notice_id">{{ notice.id }}</span>
 
 </a>
 </dd>
