Enable images for Laconica template

--- a/core/templates/laconica/base.html
+++ b/core/templates/laconica/base.html
@@ -19,7 +19,7 @@ along with Pythonica.  If not, see <http://www.gnu.org/licenses/>.
 {% endcomment %}
 
 {% block css %}
-<link rel="stylesheet" href="{{ MEDIA_URL }}css/laconica.css" type="text/css" />
+<link rel="stylesheet" href="{{ MEDIA_URL }}css/laconica/display.css" type="text/css" />
 {% endblock %}
 
 {% block body %}
