Add public timeline pagination

--- a/core/templates/laconica/inc/side.html
+++ b/core/templates/laconica/inc/side.html
@@ -25,6 +25,6 @@
 
 </ul>
       <p>
-       <a href="http://identi.ca/favorited" class="more">{% trans 'More...' %}</a>
+       <a href="% url pythonica-popular %" class="more">{% trans 'More...' %}</a>
 </p>
 </div>
