--- a/templates/pythonica/post.html
+++ b/templates/pythonica/post.html
@@ -1,4 +1,5 @@
-"""
+{% extends 'pythonica/base.html' %}{% load i18n %}
+{% comment %}
 Copyright 2009 Serge Matveenko
 
 This file is part of Pythonica.
@@ -15,23 +16,13 @@ GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with Pythonica.  If not, see <http://www.gnu.org/licenses/>.
-"""
+{% endcomment %}
 
-import os
+{% block notice_form %}
+{% with error_notice_form as notice_form %}
+{% include 'inc/notice_form.html' %}
+{% endwith %}
+{% endblock notice_form %}
 
-from django.conf import settings
-from django.conf.urls.defaults import *
-
-patterns_prefix = '.'.join((os.path.basename(os.path.dirname(__file__)),
-    'views',))
-
-urlpatterns = patterns(patterns_prefix,
-    (r'^$', 'index', {}, 'pythonica-index'),
-    (r'^page/(?P<page>\d+)$', 'index', {}, 'pythonica-index'),
-    (r'^post/$', 'post', {}, 'pythonica-post'),
-    (r'^accounts/profile/$', 'edit_profile', {}, 'pythonica-profile-edit'),
-    (r'^(?P<username>%s)/$' % settings.USERNAME_REGEX, 'profile', {},
-        'pythonica-profile'),
-    (r'^(?P<username>%s)/all/$' % settings.USERNAME_REGEX, 'list_all', {},
-        'pythonica-all'),
-)
+{% block pythonica %}
+{% endblock pythonica %}
