--- a/templates/laconica/main/index.html
+++ b/templates/laconica/main/index.html
@@ -1,4 +1,4 @@
-{% extends 'laconica/base.html' %}{% load i18n %}
+{% extends 'laconica/main/base.html' %}{% load i18n %}
 {% comment %}
 Copyright 2009 Serge Matveenko
 
