--- a/templates/laconica/profile/profile_form.html
+++ b/templates/laconica/profile/profile_form.html
@@ -1,4 +1,4 @@
-{% extends 'laconica/base.html' %}{% load i18n %}
+{% extends 'laconica/profile/base.html' %}{% load i18n %}
 {% comment %}
 Copyright 2009 Serge Matveenko
 
