--- a/templates/pythonica/core/profile.html
+++ b/templates/pythonica/core/profile.html
@@ -1,6 +1,6 @@
-{% extends 'pythonica/main/base.html' %}
+{% extends 'base.html' %}
 {% comment %}
-Copyright 2009 Serge Matveenko
+Copyright 2009-2010 Serge Matveenko
 
 This file is part of Pythonica.
 
@@ -20,8 +20,6 @@ along with Pythonica.  If not, see <http://www.gnu.org/licenses/>.
 
 {% block pythonica %}
 
-{% for notice in last_notices.object_list %}
-{% include 'inc/notice.html' %}
-{% endfor %}
+<p>@todo: user profile view and modification</p>
 
 {% endblock pythonica %}
