--- a/templates/pythonica/base.html
+++ b/templates/pythonica/base.html
@@ -18,6 +18,11 @@ You should have received a copy of the GNU Affero General Public License
 along with Pythonica.  If not, see <http://www.gnu.org/licenses/>.
 {% endcomment %}
 
+{% block header %}
+<h1><a href="{% url pythonica-index %}">{{ site.name }}</a></h1>
+{% include 'inc/main_menu.html' %}
+{% endblock header %}
+
 {% block content %}
 
 {% block notice_form %}
