--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -21,7 +21,7 @@ along with Pythonica.  If not, see <http://www.gnu.org/licenses/>.
 
 {% block content %}
 
-<p>{% trans 'Enter e-mail address you've provided for your account to reset your password.' %}</p>
+<p>{% trans "Enter e-mail address you've provided for your account to reset your password." %}</p>
 
 <form action="" method="post">
 
