--- a/templates/pythonica/inc/main_menu.html
+++ b/templates/pythonica/inc/main_menu.html
@@ -1,6 +1,7 @@
 {% load i18n %}<div class="menu">
 {% if user.is_authenticated %}
     <a href="{% url auth_logout %}">{% trans 'Logout' %}</a>
+    <a href="{% url auth_password_change %}">{% trans 'Change password' %}</a>
 {% else %}
     <a href="{% url registration_register %}">{% trans 'Register' %}</a>
     <a href="{% url auth_login %}">{% trans 'Login' %}</a>
