--- a/templates/pythonica/inc/user_link.html
+++ b/templates/pythonica/inc/user_link.html
@@ -1,1 +1,1 @@
-<a href="{{ user.get_absolute_url }}">{{ user.username }}</a>
+<a href="{% url pythonica-profile user.username %}">{{ user.username }}</a>
